# mdimgedit

./: CLAUDE.md  Cargo.toml  GEMINI.md  README.md
src/: color.rs  error.rs  lib.rs  main.rs
src/cli/: args.rs  mod.rs  output.rs
src/ops/: adjust.rs  canvas.rs  color.rs  convert.rs  crop.rs  exif.rs  filter.rs  flip.rs  info.rs  mod.rs  resize.rs  rotate.rs
tests/: integration_adjust.rs  integration_canvas.rs  integration_color.rs  integration_exif.rs  integration_info.rs  integration_transform.rs
tests/common/: mod.rs
wrk_docs/: 2025.12.28 - HLD - Image Editing CLI Tool.md  2026.01.01 - CC - Final Coverage Report.md  2026.01.01 - CC - Initial Coverage Report.md  2026.01.01 - Plan - Coverage Improvement.md
