[package]
name = "mdimgedit"
version = "0.1.0"
edition = "2021"
description = "AI-focused command-line image editing tool"
license = "MIT"

[dependencies]
image = "0.25"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
imageproc = "0.25"
kamadak-exif = "0.5"

[dev-dependencies]
tempfile = "3.10"
